workers/cs_workers/templates/services/outputs-processor-Deployment.template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outputs-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: outputs-processor
  template:
    metadata:
      labels:
        app: outputs-processor
    spec:
      containers:
        - name: outputs-processor
          image:
          ports:
            - containerPort: 8888
      nodeSelector:
        component: api
