workers/cs_workers/templates/services/redis-master-Deployment.template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
      role: master
      tier: backend
  template:
    metadata:
      labels:
        app: redis
        role: master
        tier: backend
    spec:
      containers:
        - env: []
          command: ["redis-server", "--appendonly", "yes"]
          image: # redis-python
          lifecycle:
            postStart:
              exec:
                command:
                  - python3
                  - /home/redis_init.py
          name: master
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
          - mountPath: /data
            name: redis-volume
      volumes:
      - name: redis-volume
        # This GCE PD must already exist.
        gcePersistentDisk:
          pdName: redis-disk
          fsType: ext4
      nodeSelector:
        component: api
