workers/cs_workers/templates/services/scheduler-Deployment.template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler
  template:
    metadata:
      labels:
        app: scheduler
    spec:
      serviceAccountName: scheduler
      containers:
        - name: scheduler
          image:
          ports:
            - containerPort: 8888
      nodeSelector:
        component: api
