workers/cs_workers/templates/services/scheduler-ingressroute.template.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: scheduler-tls
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match:
      kind: Rule
      services:
        - name: scheduler
          port: 80
  tls:
    certResolver: myresolver
